# image-organizer

./: .gitignore  README.md  heic_to_jpg.py  media_sorter.py  organizer.py  test.py
ftp_test/: Cargo.toml
ftp_test/src/: main.rs
image_handler_api/: .gitignore  manage.py
image_handler_api/image_handler_api/: asgi.py  settings.py  urls.py  views.py  wsgi.py
image_handler_api/image_handler_api/templates/image_handler_api/: index.html
image_handler_api/img_org/: admin.py  apps.py  models.py  urls.py  views.py
image_handler_api/img_org/migrations/: 0001_initial.py  0002_alter_file_file_path.py  0003_alter_file_file_path.py
image_handler_api/img_org/templates/img_org/: index.html
image_handler_app/: .gitignore  Cargo.toml
image_handler_app/src/: main.rs
image_handler_webapp/: .gitignore  Cargo.toml
image_handler_webapp/src/: main.rs
image_handler_webapp/templates/: base.html.tera  index.html.tera
imaginator/: .gitignore  Cargo.toml  docker-compose.yml  mprocs.yaml
imaginator/adapters/indradb_adapter/: Cargo.toml
imaginator/adapters/postgres_adapter/: Cargo.toml
imaginator/adapters/postgres_adapter/src/: lib.rs  media_data.rs  meta_data.rs  types.rs  util.rs  xmp_data.rs
imaginator/adapters/postgres_adapter/src/types/: mediatype.rs  metadata.rs  xmpdata.rs
imaginator/adapters/postgres_adapter/src/util/: query.rs
imaginator/api/: .gitignore  Cargo.toml
imaginator/api-testing/: image-create.json  test.txt
imaginator/api/src/: app.rs  db.rs  fileserv.rs  lib.rs  main.rs  routes.rs  state.rs
imaginator/api/src/db/: image_data.rs  meta_data.rs  util.rs  xmp_data.rs
imaginator/imaginator_app/: Cargo.toml
imaginator/imaginator_app/src/: heic.rs  jpg.rs  lib.rs  mysql_adapter.rs  png.rs  utils.rs
imaginator/imaginator_app/src/utils/: lazy_async_promise.rs
imaginator/imaginator_egui/: Cargo.toml
imaginator/imaginator_egui/src/: imaginator.rs  main.rs  util.rs
imaginator/imaginator_egui/src/apps/: controls.rs  media_grid.rs  mod.rs
imaginator/imaginator_egui/src/components/: media.rs
imaginator/imaginator_importer/: Cargo.toml
imaginator/imaginator_importer/src/: errors.rs  lib.rs
imaginator/imaginator_importer/src/adapters/: filesystem_adapter.rs  mod.rs
imaginator/imaginator_types/: Cargo.toml
imaginator/imaginator_types/src/: args.rs  graphdb.rs  lib.rs  media.rs  mediatypes.rs  metadata.rs  xmpdata.rs
imaginator/infrastructure/db_init/: 01-init-db.sql
imaginator/infrastructure/mysql/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
imaginator/infrastructure/mysql/#innodb_redo/: #ib_redo12  #ib_redo41_tmp  #ib_redo42_tmp  #ib_redo43_tmp
imaginator/infrastructure/mysql/imaginator/: media_data.ibd  xmp_data.ibd
imaginator/infrastructure/mysql/mysql/: general_log_213.sdi  slow_log_214.sdi
imaginator/infrastructure/mysql/performance_schema/: accounts_145.sdi  binary_log_trans_189.sdi  cond_instances_82.sdi  data_lock_waits_161.sdi  data_locks_160.sdi  error_log_83.sdi  events_errors_su_139.sdi  events_errors_su_140.sdi  events_errors_su_141.sdi  events_errors_su_142.sdi  events_errors_su_143.sdi  events_stages_cu_111.sdi  events_stages_hi_112.sdi  events_stages_hi_113.sdi  events_stages_su_114.sdi  events_stages_su_115.sdi  events_stages_su_116.sdi  events_stages_su_117.sdi  events_stages_su_118.sdi  events_statement_119.sdi  events_statement_120.sdi  events_statement_121.sdi  events_statement_122.sdi  events_statement_123.sdi  events_statement_124.sdi  events_statement_125.sdi  events_statement_126.sdi  events_statement_127.sdi  events_statement_128.sdi  events_statement_129.sdi  events_statement_130.sdi  events_transacti_131.sdi  events_transacti_132.sdi  events_transacti_133.sdi  events_transacti_134.sdi  events_transacti_135.sdi  events_transacti_136.sdi  events_transacti_137.sdi  events_transacti_138.sdi  events_waits_cur_84.sdi  (+70 more)
imaginator/infrastructure/mysql/sys/: sys_config.ibd
imaginator/types/: Cargo.toml
imaginator/types/src/: args.rs  database.rs  graphdb.rs  image.rs  lib.rs  mediatypes.rs  metadata.rs  xmpdata.rs
imaginator/view/: Cargo.toml  README.md  Trunk.toml  build.rs  index.html
imaginator/view/src/: api.rs  app.rs  components.rs  images.rs  lib.rs  main.rs  types.rs
imaginator/view/src/components/: icons.rs  image.rs
imaginator/view/style/: style.scss
old_system/: heic_to_jpg.py  refit.sh  runner.py
