[package]
name = "image_handler_webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
reqwest = { version = "0.11", features = ["json"] }
ftp = "3.0.1"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]