[package]
name = "image_handler_webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }