[package]
name = "imager-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["headers"] }
dotenv = "0.15.0"
image = "0.24.7"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "mysql", "chrono", "tls-rustls", "macros"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.9", features = ["io"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
types = { path = "../types"}
uuid = { version = "1.6.1", features = ["v7", "serde"] }
