[package]
name = "imaginator_egui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27.2"
egui = "0.27.2"
lazy_async_promise = "0.5.0"
imaginator_importer = { path = "../imaginator_importer" }
imaginator_app = { path = "../imaginator_app" }
imaginator_types = { path = "../imaginator_types" }
sqlx = { version = "0.7.4", features = ["mysql", "runtime-tokio"] }
tokio = "1.38.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
