[package]
name = "imaginator_types"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
dateparser = "0.2.1"
indradb = "4.0.0"
indradb-lib = "4.0.0"
kamadak-exif = "0.5.5"
leptos = "0.6.12"
serde = "1.0.203"
serde_json = "1.0.117"
sqlx = "0.7.4"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
xmp_toolkit = "1.7.3"
# data_communicator = { git = "https://github.com/tomellm/data_communicator.git", branch = "tom/buffered-init" }
data_communicator = { path = "../../../data_communicator" }
tracing = "0.1.40"
