[package]

name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["chrono", "sqlx-mysql"] }
uuid = { version = "1.8.0", features = ["serde", "v4", "v7"] }
kamadak-exif = { version = "0.5.5", optional = true }
xmp_toolkit = { version = "1.7.3", optional = true }
leptos = "0.5.7"
serde_json = "1.0.117"
dateparser = "0.2.1"
indradb-lib = { version = "4.0.0", optional = true }

[features]
backend = ["dep:xmp_toolkit", "dep:kamadak-exif", "dep:indradb-lib"]
