[package]
name = "view"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6.12", features = ["csr"] }
leptonic = { version = "0.3.0" }
leptos_query = "0.3.0"
types = { path = "../types" }
reqwest = "0.11.27"
dotenv_codegen = "0.15.0"
serde_json = "1.0.117"
tracing-subscriber-wasm = "0.1.0"
tracing-subscriber = "0.3.18"
leptos-use = "0.9.0"
serde = "1.0.203"
leptos_icons = "0.3.1"
icondata = "0.3.1"

[build-dependencies]
leptonic-theme = "0.3.0"
leptos-tiptap-build = "0.2.6"
